# vsr-cli

./: .gitattributes  .gitignore  NOTES.md  README.md  README_EN.md  bench.sh  bench_split.sh  pipeline.vpy  pyproject.toml  setup.sh
benchmarks/: bench.sh  bench_split.sh
vsr/: __init__.py  cli.py  config.py  pipeline.py  presets.py  wizard.py
