[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vsr-cli"
version = "0.1.0"
description = "CLI for video super-resolution (R-ESRGAN) and frame interpolation (RIFE) via vs-mlrt on TensorRT, piped to ffmpeg"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "vsr-cli" }]
dependencies = [
    "questionary>=2.0",
    "rich>=13.0",
    "tomli-w>=1.0",
]

[project.scripts]
vsr = "vsr.cli:main"

[tool.setuptools]
packages = ["vsr"]
# setup.sh installs this in editable/source-tree mode; pipeline.vpy stays at repo root.
